postgres/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: some-ingress-route
  namespace: postgres
spec:
  entryPoints:
  - postgres
  routes:
  - match: HostSNI(`postgres.example.com`)
    services:
    - name: postgres-db-postgresql # Service name; double check
      port: 5432
  tls:
    secretName: some-certificate-name-tls # Defined in the certificate.yaml file
